# knz-gfxdemos

./: .gitignore  CMakeLists.txt  LICENSE  README.md
vk_hello/: flat_frag.glsl  flat_vert.glsl  main.c  rgb_frag.glsl  rgb_vert.glsl
vk_hello/shaders/: flat_frag.glsl  flat_vert.glsl
vk_hlsl/: main.c
vk_hlsl/shaders/: flat.hlsl  lit.hlsl
vk_hlsl/tools/: test_vertex_deduplicate_hashtable.c
vk_meshview/: main.c
vk_meshview/data/: suzanne.blend
vk_meshview/shaders/: flat_vert.glsl  lit_frag.glsl  lit_vert.glsl  rgb_vert.glsl
vk_meshview/tools/: mesh_export.py  test_vertex_deduplicate.c
vk_scene/: main.c
vk_scene/data/: cube.blend  dummy.tga  noise.tga  suzanne.blend
vk_scene/shaders/: lit_frag.glsl  lit_vert.glsl
